[package]
name = "async-part6"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
rand = "0.9.0-alpha.2"
pin-project = "1.0"
# tokio = {version="1.39.3", features=["full"]}
tokio = {version="1.39.3", features=["rt-multi-thread", "net", "io-util"]}
tokio-stream = "0.1"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
flate2 = { version = "1.0.28", optional = true }
bincode = { version = "1.3.3" }

# [profile.release]
# opt-level = 3
# lto = true
# codegen-units = 1
# panic = "abort"
# overflow-checks = false

[features]
compression = ["flate2"]
with_tcp = []

